--- a/Syntax/过渡&动画/可复用的过渡.html
+++ b/Syntax/过渡&动画/可复用的过渡.html
@@ -3,11 +3,57 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<script type="text/javascript" src="../../js/vue.min.js" ></script>
 	</head>
 	<body>
 		<!--
 			过渡可以通过 Vue 的组件系统实现复用。
 			要创建一个可复用过渡组件，你需要做的就是将 <transition> 或者 <transition-group> 作为根组件，
 			然后将任何子组件放置在其中就可以了。-->
+			
+			<script>
+				// 使用 template 的简单例子：
+				Vue.component('my-special-transition', {
+					template: '\
+						<template\
+							name="very-special-transtion"\
+							model="out-in"\
+							@before-enter="beforeEnter"\
+							@after-enter="afterEnter">\
+							<slot></slot>\
+						</template>\
+					',
+					methods: {
+						berforeEnter: function (el) {
+							// ...
+						},
+						afterEnter: function (el) {
+							// ...
+						}
+					}
+				});
+				
+				// 函数组件更适合完成这个任务：
+				Vue.component('my-special-transition', {
+					functional: true,
+					render: function (createElement, context) {
+						var data = {
+							props: {
+								name: 'very-special-transtion',
+								mode: 'out-in'
+							},
+							on: {
+								beforeEnter: function (el) {
+									// ...
+								},
+								afterEnter: function (el) {
+									// ...
+								}
+							}
+						};
+						return createElement('transition', data, context.children);
+					}
+				})
+			</script>
 	</body>
 </html>
